# NTU_2023Fall_StatisticalLearningMachineLearning

./: README.md  pyproject.toml
final_project/: SVM.ipynb  final.ipynb  heatmap.ipynb  roc.ipynb
final_project/ROC/: KNN_b1.csv  KNN_b2.csv  SVM_b1.csv  SVM_b2.csv  categoricalnb_b1 (1).csv  categoricalnb_b2.csv  log_stack_b1.csv  log_stack_b2.csv  logistic_with_regularization_b1.csv  logistic_with_regularization_b2.csv  random_forest_b1.csv  random_forest_b2.csv  rf_stack_b1.csv  rf_stack_b2.csv
final_project/feature_weight/: SVM_b1.csv  SVM_b2.csv
final_project/heatmap/: SVM_b1.csv  SVM_b2.csv
hw1/: HW1_Q.html  HW1_Sol.html  HW1_Sol.ipynb
hw2/: HW2_Q.ipynb  HW2_Sol.html  HW2_Sol.ipynb
hw2/adult/: adult.data  adult.test
hw3/: HW3_Q.ipynb  HW3_Sol.ipynb
hw4/: HW4_Q.ipynb  HW4_Sol.html  HW4_Sol.ipynb  model.pt
hw5/: HW5_Sol.html  HW5_Sol.ipynb  best_params.csv  id_filename.txt  predictions.csv  train.ipynb  training_class.txt
