[tool.poetry]
name = "slml"
version = "0.1.0"
description = ""
authors = ["leeyoyo49 <lee.s.yoyo0409@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
torch = "^2.0.1"
jupyter = "^1.0.0"
notebook = "^7.0.4"
pillow = "^10.0.1"
ucimlrepo = "^0.0.2"
yfinance = "^0.2.31"
adjusttext = "^0.8"
seaborn = "^0.13.0"
joblib = "^1.3.2"
torchvision = "^0.16.1"
openpyxl = "^3.1.2"
optuna = "^3.5.0"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
